-Show more info in some file viewers (.sna, .p, .o, etc)
-Added .nex file viewer
-Added copy and delete entire folder
-Added SCR to TXT file converter

Improved Debug CPU Window:
-Can load a source code
-Tell when a condition is satisfied or not
-Detecting when running a esxdos call, using the esxdos handler, and doing step over

Improved ZX Vision menu interface:
-Added Turbo Vision GUI style
-Added GUI Style Selector menu
-Added GUI Test Style
-Added key Shift+Cursor Right to switch to another window
-Added action to minimize all windows
-Added setting to ignore mouse click to open the menu
-Added more utf-8 characters support
-Added setting to show files in hexa+ascii using file viewer

Improved all-to-pixel text rendering: 
-Allow 1:1 scale
-Allow to set window size and offsets in characters

Improved Speccy online browser: 
-now uses ZXinfo API V3
-uses SSL SNI when downloading files

Improved Frameskip algorithm
Improved Core statistics: Add info about frames drawn & dropped
Improved Hex Editor: can now be backgrounded
Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)
Improved File Browser: added file size information
Improved cocoa (Mac) driver: allows distinguish between left and right Ctrl key, and left and right Alt key
Improved panic screen: added countdown timer, extended to ZX Desktop


Fixed ZX-Uno bugs:
-Fixed bugs on mmc and flash storage layer which prevented to update bios, esxdos rom or entire flash from the BIOS
-Fixed chloe mmu mapping: bootm has priority. If bootm=1, can't map chloe. If bootm=0, can be chloe or +2a

Fixed TBBlue bugs:
-Fixed relative sprites: when anchor sprite is not visible, negative coordinates, detecting unified/composite, mirror, rotation
-Fixed 4bp sprites: pattern calculating, transparency, anchor
-Fixed clipping (affected scrollnutter demo in the right round corners)