@@ -43,6 +43,7 @@ Improved Debug CPU Window:
 
 Improved ZX Vision menu interface:
 -Added Turbo Vision GUI style
+-Added ZEsarUX Matte GUI style
 -Added GUI Style Selector menu
 -Added GUI Test Style
 -Added key Shift+Cursor Right to switch to another window
